--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jyoti cv</title>
 </head>
-<body>
+<body style="background-color: #FEECE9;>
     <table cellspacing="20">
         <tr>
             <td><img src="jyoti-modified.png" alt="JyotiImage" width="200px" height="200px"></td>
